[package]
name = "moth-budget"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.142"
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.19", features = ["env-filter"]}
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.23", features = ["derive", "env"] }

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
